--- a/src/pages/notFound/notFound.module.css
+++ b/src/pages/notFound/notFound.module.css
@@ -1,7 +1,17 @@
 .notFoundImg{
-    width: 350px;
+    width: 300px;
 }
 
 .notFoundPage{
     height: calc(100vh - 72px);
+    padding:  0 30px;
+}
+
+.title{
+    color: var(--secondary-font-color);
+}
+
+.text{
+    color: var(--notFound-text-color);
+    width: 90%;
 }
