--- a/src/components/countryDetailsSection/CountryDetailsSection.module.css
+++ b/src/components/countryDetailsSection/CountryDetailsSection.module.css
@@ -1,34 +1,36 @@
-.borderCountries, h1, .details{
+.borderCountries,
+h1,
+.details {
     hyphens: auto;
 }
 
-.countryName{
+.countryName {
     font-size: 1rem;
 }
 
 
-.flagContainer{
+.flagContainer {
     height: 400px !important;
-    
+
 }
 
-.flagImage{
+.flagImage {
     width: 100%;
     height: 100%;
     box-shadow: var(--flag-shadow);
 }
 
-.countryDetails{
+.countryDetails {
     --bs-gutter-x: 7rem !important;
 }
 
 @media (max-width: 767px) {
-  
+
     .countryDetails {
         --bs-gutter-x: 0 !important;
     }
 
-    .flagContainer  {
+    .flagContainer {
         height: 225px !important;
         width: 100% !important;
     }
@@ -37,34 +39,34 @@
 
 @media (min-width: 768px) and (max-width: 1200px) {
 
-    .countryDetails{
+    .countryDetails {
         --bs-gutter-x: 2.5rem !important;
     }
 
 }
 
-@media (max-width: 991px){
+@media (max-width: 991px) {
 
-    .detailsPage{
+    .detailsPage {
         min-height: calc(100vh - 98.4px);
     }
 }
 
-@media (max-width: 991px){
+@media (max-width: 991px) {
 
-    .countryName{
-        margin-top: 2.3rem!important;
+    .countryName {
+        margin-top: 2.3rem !important;
     }
-    
-    .details{
-        margin-bottom: 40px  !important;
+
+    .details {
+        margin-bottom: 40px !important;
     }
 
     .bordersContainer {
         margin-top: 0 !important;
     }
 
-    .detailsPage{
+    .detailsPage {
         min-height: calc(100vh - 98.4px);
     }
 }
